--- a/wwwsrc/src/assets/_variables.scss
+++ b/wwwsrc/src/assets/_variables.scss
@@ -1,4 +1,4 @@
-// Minty 4.5.3
+// Darkly 4.5.3
 // Bootswatch
 
 //
@@ -7,88 +7,158 @@
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #f7f7f9 !default;
-$gray-300: #eceeef !default;
+$gray-200: #ebebeb !default;
+$gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
-$gray-500: #aaa !default;
+$gray-500: #adb5bd !default;
 $gray-600: #888 !default;
-$gray-700: #5a5a5a !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
+$gray-700: #444 !default;
+$gray-800: #303030 !default;
+$gray-900: #222 !default;
 $black:    #000 !default;
 
-$blue:    #007bff !default;
+$blue:    #375a7f !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #ff7851 !default;
+$red:     #e74c3c !default;
 $orange:  #fd7e14 !default;
-$yellow:  #ffce67 !default;
-$green:   #56cc9d !default;
+$yellow:  #f39c12 !default;
+$green:   #00bc8c !default;
 $teal:    #20c997 !default;
-$cyan:    #6cc3d5 !default;
+$cyan:    #3498db !default;
 
-$primary:       #78c2ad !default;
-$secondary:     #f3969a !default;
+$primary:       $blue !default;
+$secondary:     $gray-700 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
+$light:         $gray-500 !default;
 $dark:          $gray-800 !default;
 
-$yiq-contrasted-threshold: 250 !default;
+$yiq-contrasted-threshold:  175 !default;
 
 // Body
 
-$body-color:                $gray-600 !default;
+$body-bg:                   $gray-900 !default;
+$body-color:                $white !default;
 
-// Components
+// Links
 
-$border-radius:               .4rem !default;
-$border-radius-lg:            .6rem !default;
-$border-radius-sm:            .3rem !default;
+$link-color:                $success !default;
 
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
-$headings-font-family:        Montserrat, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$headings-color:              $gray-700 !default;
+$font-family-sans-serif:      Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-size-base:              .9375rem !default;
+$font-size-sm:                $font-size-base * .88 !default;
+$h1-font-size:                3rem !default;
+$h2-font-size:                2.5rem !default;
+$h3-font-size:                2rem !default;
+$text-muted:                  $gray-600 !default;
 
 // Tables
 
-$table-border-color:          rgba(0, 0, 0, .05) !default;
+$table-accent-bg:             $gray-800 !default;
+$table-border-color:          $gray-700 !default;
+
+// Forms
+
+$input-border-color:                $body-bg !default;
+$input-group-addon-color:           $gray-500 !default;
+$input-group-addon-bg:              $gray-700 !default;
+$custom-file-color:                 $gray-500 !default;
+$custom-file-border-color:          $body-bg !default;
 
 // Dropdowns
 
+$dropdown-bg:                       $gray-900 !default;
+$dropdown-border-color:             $gray-700 !default;
+$dropdown-divider-bg:               $gray-700 !default;
+$dropdown-link-color:               $white !default;
 $dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $secondary !default;
+$dropdown-link-hover-bg:            $primary !default;
+
+// Navs
+
+$nav-link-padding-x:                2rem !default;
+$nav-link-disabled-color:           $gray-500 !default;
+$nav-tabs-border-color:             $gray-700 !default;
+$nav-tabs-link-hover-border-color:  $nav-tabs-border-color $nav-tabs-border-color transparent !default;
+$nav-tabs-link-active-color:        $white !default;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent !default;
 
 // Navbar
 
-$navbar-dark-color:                 rgba($white, .6) !default;
-$navbar-dark-hover-color:           $white !default;
-$navbar-light-color:                rgba($black, .3) !default;
-$navbar-light-hover-color:          $gray-700 !default;
-$navbar-light-active-color:         $gray-700 !default;
-$navbar-light-disabled-color:       rgba($black, .1) !default;
+$navbar-padding-y:                  1rem !default;
+$navbar-dark-color:                rgba($white, .6) !default;
+$navbar-dark-hover-color:          $white !default;
+$navbar-light-color:                rgba($gray-900, .7) !default;
+$navbar-light-hover-color:          $gray-900 !default;
+$navbar-light-active-color:         $gray-900 !default;
+$navbar-light-toggler-border-color: rgba($gray-900, .1) !default;
 
 // Pagination
 
 $pagination-color:                  $white !default;
-$pagination-bg:                     $primary !default;
-$pagination-border-color:           $primary !default;
+$pagination-bg:                     $success !default;
+$pagination-border-width:           0 !default;
+$pagination-border-color:           transparent !default;
 $pagination-hover-color:            $white !default;
-$pagination-hover-bg:               $secondary !default;
-$pagination-hover-border-color:     $pagination-hover-bg !default;
-$pagination-active-bg:              $secondary !default;
-$pagination-active-border-color:    $pagination-active-bg !default;
+$pagination-hover-bg:               lighten($success, 10%) !default;
+$pagination-hover-border-color:     transparent !default;
+$pagination-active-bg:              $pagination-hover-bg !default;
+$pagination-active-border-color:    transparent !default;
 $pagination-disabled-color:         $white !default;
-$pagination-disabled-bg:            #cce8e0 !default;
-$pagination-disabled-border-color:  $pagination-disabled-bg !default;
+$pagination-disabled-bg:            darken($success, 15%) !default;
+$pagination-disabled-border-color:  transparent !default;
+
+// Jumbotron
+
+$jumbotron-bg:                      $gray-800 !default;
+
+// Cards
+
+$card-cap-bg:                       $gray-700 !default;
+$card-bg:                           $gray-800 !default;
+
+// Popovers
+
+$popover-bg:                        $gray-800 !default;
+$popover-header-bg:                 $gray-700 !default;
+
+// Toasts
+
+$toast-background-color:            $gray-700 !default;
+$toast-header-background-color:     $gray-800 !default;
+
+// Modals
+
+$modal-content-bg:                  $gray-800 !default;
+$modal-content-border-color:        $gray-700 !default;
+$modal-header-border-color:         $gray-700 !default;
+
+// Progress bars
+
+$progress-bg:                       $gray-700 !default;
+
+// List group
+
+$list-group-bg:                     $gray-800 !default;
+$list-group-border-color:           $gray-700 !default;
+$list-group-hover-bg:               $gray-700 !default;
 
 // Breadcrumbs
 
-$breadcrumb-bg:                     $primary !default;
-$breadcrumb-divider-color:          $white !default;
-$breadcrumb-active-color:           $breadcrumb-divider-color !default;
+$breadcrumb-bg:                     $gray-700 !default;
+
+// Close
+
+$close-color:                       $white !default;
+$close-text-shadow:                 none !default;
+
+// Code
+
+$pre-color:                         inherit !default;
